--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -5,7 +5,7 @@
     padding: 8rem 2rem;
 
     display: grid;
-    grid-template-columns: 1fr 900px 1fr;
+    grid-template-columns: 1fr 100rem 1fr;
 
     @media only screen and (max-width:$bp-largest) {
         grid-template-columns: 100%;
