--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -2,12 +2,10 @@
     background-image: linear-gradient(to right, rgba(#f9f8f8, .93), rgba(#e0dfdf, .05));
     grid-column: 1/-1;
     grid-row: featured-start/ featured-end;
-    padding: 2rem 2rem;
-    grid-row: featured-start/ featured-end;
-    padding: 2rem 2rem;
+    padding: 8rem 2rem;
 
     display: grid;
-    grid-template-columns: 1fr 900px 1fr;
+    grid-template-columns: 1fr 100rem 1fr;
 
     @media only screen and (max-width:$bp-largest) {
         grid-template-columns: 1fr 100% 1fr;
