--- a/sass/_mobile-nav.scss
+++ b/sass/_mobile-nav.scss
@@ -14,9 +14,9 @@
 
 .icon-mobile-nav[name="close-outline"] {
     display: none;
-    position: fixed;
-    top: 8px;
-    right: 30px;
+    // position: fixed;
+    // top: 8px;
+    // right: 30px;
 }
 
 @media only screen and (max-width:$bp-big) {
@@ -26,11 +26,12 @@
         z-index: 9999;
     }
 
-    .navigation {
-        transition: all 3s;
-    }
+    // .navigation {
+    //     transition: all 3s;
+    // }
 
     .main-nav {
+        // z-index: 100;
         background-color: rgba(27, 64, 115, 0.951);
         -webkit-backdrop-filter: blur(5px);
         position: absolute;
@@ -40,9 +41,10 @@
         width: 50%;
         transform: translateY(-100%);
         transform: translateX(100%);
-        position: fixed;
+        // position: fixed;
         border-top-left-radius: 30px;
-        border-left: 1px solid #fff;
+        border-left: 2px solid #fff;
+        box-shadow: 0 1.2rem 3.2rem rgba(38, 93, 165, 0.388);
 
         display: flex;
         align-items: center;
