--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -1,27 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-// * {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-// }
-
-// body {
-//     min-height: 100vh;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     background: #4070f4;
-// }
-
 .section-registration {
-    background-image: linear-gradient(to right, rgba($color-grey-light-2, 2), rgba($color-grey-light-2, .95));
+    background-image: linear-gradient(to right, rgba($color-primary, 2), rgba($color-primary-light, .93)), url(../img/hero-image.svg);
     grid-column: 1/-1;
-    grid-row: registration-start/ registration-end;
+    grid-row: header-start/ header-end;
     padding: 8rem 2rem;
 
+
     display: grid;
-    grid-template-columns: 1fr 900px 1fr;
+    grid-template-columns: 1fr 100rem 1fr;
 
     @media only screen and (max-width:$bp-largest) {
         grid-template-columns: 100%;
@@ -47,9 +34,8 @@
         text-align: center;
         font-family: 'Poppins', sans-serif;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
 
-        // position: relative;
-        // max-width: 430px;
         @media only screen and (max-width:$bp-big) {
             grid-column: 1/-1;
         }
@@ -73,7 +59,7 @@
             }
 
             &-image {
-                background-image: linear-gradient(to right, rgba($color-primary, .35), rgba($color-primary-light, .35)), url(../img/hero-image.svg);
+                background-image: linear-gradient(to right, rgba($color-primary, .5), rgba($color-primary-light, .5)), url(../img/email-guard.png);
                 background-size: cover;
                 background-position: center;
 
@@ -133,6 +119,33 @@
                     font-size: 2rem;
                     font-weight: 500;
                     margin-left: 10px;
+
+                    .terms {
+                        color: $color-secondary-dark;
+                        text-decoration: none;
+                        font-size: 2.5rem;
+                        font-weight: 600;
+                        position: relative;
+
+                        &::before {
+                            transition: all .3s;
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                            display: block;
+                            content: '';
+                            height: 1px;
+                            width: 0px;
+                            background-color: $color-secondary-dark;
+                        }
+
+                        &:hover {
+
+                            &::before {
+                                width: 100%;
+                            }
+                        }
+                    }
                 }
             }
 
@@ -151,10 +164,25 @@
                     text-decoration: none;
                     font-size: 2.5rem;
                     font-weight: 600;
+                    position: relative;
+
+                    &::before {
+                        transition: all .3s;
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        display: block;
+                        content: '';
+                        height: 1px;
+                        width: 0px;
+                        background-color: $color-secondary-dark;
+                    }
 
                     &:hover {
-                        text-decoration: underline;
-                        text-decoration-color: $color-grey-light-1;
+
+                        &::before {
+                            width: 100%;
+                        }
                     }
                 }
             }
