--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "base";
 @import "typography";
 
-@import "sidebar";
+@import "pricing";
 @import "header";
 @import "mobile-nav";
 @import "features";
