--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -82,8 +82,18 @@
             margin-top: 3rem;
 
             &_input {
-                height: 6rem;
-                margin: 3rem 0;
+                height: 5rem;
+                margin: 7rem 0;
+
+                label {
+                    display: block;
+                    padding-left: 2rem;
+                    text-align: left;
+                    font-size: 2rem;
+                    font-weight: 500;
+                    margin-bottom: 1.2rem;
+                    color: $color-grey-light-1;
+                }
 
                 input {
                     height: 100%;
