--- a/sass/_dataRetention.scss
+++ b/sass/_dataRetention.scss
@@ -42,13 +42,6 @@
       // position: relative;
       text-align: center;
 
-      &-mini {
-         font-size: 4rem;
-         font-weight: 600;
-         text-align: center;
-         margin-bottom: 5rem;
-      }
-
       @media only screen and (max-width:$bp-big) {
          margin-top: 3rem;
          font-size: 3.5rem;
@@ -58,10 +51,17 @@
          // font-size: 2.5rem;
       }
 
-      .about-span {
-         font-weight: 500;
-         color: $color-secondary-dark;
+      &-mini {
+         font-size: 4rem;
+         font-weight: 600;
+         text-align: center;
+         margin-bottom: 5rem;
+
+         @media only screen and (max-width:$bp-big) {
+            font-size: 3rem;
+         }
       }
+
    }
 
    &-heading {
